--- a/materials/public/css/scss/components/_pagination.scss
+++ b/materials/public/css/scss/components/_pagination.scss
@@ -30,6 +30,12 @@
         }
     }
 
+    &__item--hideable-xs {
+        @media screen and (max-width: $xs-l) {
+            display: none;
+        }
+    }
+
     &__item:first-of-type &__button {
         border-top-left-radius: 1rem;
         border-bottom-left-radius: 1rem;
