--- a/materials/public/css/scss/defaults/_variables.scss
+++ b/materials/public/css/scss/defaults/_variables.scss
@@ -33,6 +33,7 @@ $space-md: 0.5rem;
 $space-lg: 1rem;
 
 // screen sizes
+$xs-l: $xs - 200px;
 $xs: 767px;
 $sm-l: $xs + 1px;
 $sm: 991px;
